cmdbuild/src/main/webapp/stylesheets/cmdbuild.css
@import url("./icons.css");
@import url("./trees.css");

html {
	height: 100%;
	width: 100%;
}

body {
	padding: 0;
	margin: 0;
	overflow: hidden;
	background-color: #ffffff;
	font-family: Verdana, Arial, Helvetica, sans-serif;
	position: absolute;
	top: 0pt;
	left: 0pt;
	height: 100%;
	width: 100%;
}

em { font-style: oblique !important; }

.cm-calculated-field {
	color: green;
	background-color: #f0fff0;
}

.cmdb-tab p {
	color: #15428B;
	background-image: url("../images/tabs/pressedbg.png");
	background-color: #d9eafe;
	background-repeat: repeat-x;
	font: 11px tahoma, arial, helvetica;
	padding: 4px 20px 4px 18px;
	border: 1px solid #99bbe8;
	border-left: none;
	cursor: pointer;
	border-radius: 0 5px 5px 0;
	-moz-border-radius: 0 5px 5px 0;
	white-space: nowrap;
}

.cmdb-pressed-tab p {
	background-image: url("../images/tabs/currentbg.png");
	background-color: #d9eafe;
	font-weight: bold;
}

.cmdb-tab-icon {
	float: left;
	height: 16px;
	margin: 14px 4px;
	width: 16px;
}

#release_box {
	text-align: center;
	padding-top: 1em;
	color: #04408c;
	font-weight: bold;
}

.cm_no_display { display: none; }

/* INFO AND SUPPORTS */
.cm-credits-container {
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
	font-weight: 300;
	color: #333;
	width: 600px;
}

.cm-credits-container a { color: #1c4196; }

.cm-credits-container h1 {
	color: #1c4196;
	font-weight: 300;
	font-size: 1.5em;
}

.cm-credits-logo-container,
.cm-credits-links-container {
	clear: left;
	float: left;
}

.cm-credits-logo-container {
	width: 100%;
	padding: 1em 20% 0 20%;
	margin: 0;
	background-color: #ffffff;
}

.cm-credits-links-container {
	width: 100%;
	padding: 5% 5% 0 5%;
}

.cm-credits-logo-container img {
	width: 100%;
	margin-top: 0.5em;
}

.cm-credits-release-version {
	float: right;
	font-size: 1.2em;
	color: #1c4196;
	position: relative;
	bottom: 2em;
	right: 0.5em;
	padding: 0;
	margin: 0;
}

.cm-credits-links-left,
.cm-credits-links-right {
	float: left;
	width: 47%;
}

.cm-credits-links-left { margin-right: 3%; }

.cm-credits-links-right { margin-left: 3%; }

.cm-credits-links-container ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.cm-credits-links-container ul li {
	line-height: 2em;
	border-bottom: 1px solid #dddddd;
}

.cm-credit-last-link { border-bottom: none !important; }

.cm-credits-producer {
	float: left;
	margin-top: 5% !important;
	margin-bottom: 5% !important;
	padding: 1em 2em 1em 2em;
	background-color: #ffffff;

	-webkit-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.15);
	-moz-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.15);
	box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.15);

	-moz-border-radius: 5px;
	border-radius: 5px;
}

/* LOGIN */
#login_box_wrap {
	text-align: center;
	width: 100%;
}

#login_box {
	width: 300px;
	text-align: left;
	margin: 100px auto;
}

/* HEADER */
#header {
	height: 45px;
	color: #666666;
	padding: 3px 0 0 3px;
	margin: 0;
}

#header img {
	float: left;
	height: 35px;
	margin-top: 2px;
	margin-left: 2px;
}

#header_po {
	float: right;
	font-size: 10px;
	height: 45px;
	margin: 0;
	padding: 8px 10px 0 0;
	text-align: right;
	line-height: 1.3em;
	width: 20em;
	text-align: right;
}

#header #instance_name {
	float: left;
	padding: 0.8em 0 0 0
}

#lang_bar {
	float: right;
	clear: both;
}

#lang_bar a {
	float: right;
	margin: 0px 5px;
}

#msg-ct {
	left: 50%;
	position: absolute;
	top: 3px;
	width: 350px;
	margin-left: -174px;
}

#msg {
	height: 45px;
	background-image: url("../images/msg-bg.png");
	color: #666666;
	font-size: 11px;
	cursor: pointer;
}

.msg-blue #msg { background-image: url("../images/msg-bg-blue.png"); }

#msg-inner {
	padding: 5px 10px 0;
	line-height: 12px;
	text-align: center;
}

#msg-inner strong { color: #222222; }

#msg img {
	width: 19px;
	height: 19px;
}

#msg-inner-hidden { padding-top: 8px; }

.msg-inner-hidden-tooltip p {
	padding: 0;
	margin: 0;
}

#msg-inner p {
	padding: 0;
	margin: 0.5em 0 0 0;
}

/* splash */
.cmMask { background: #eeeeee !important; }

.splashScreen_image,
.splashScreen_image_administration {
	height: 217px;
	width: 381px;
	display: block;
	background-image: url("../images/splash.png");
	background-position: top left;
	background-repeat: no-repeat;
}

.splashScreen_image_administration { background-image: url("../images/splash-gray.png"); }

.splashScreen_central {
	font-family: sans-serif;
	color: #666666;
	line-height: 1.4em;
	font-size: 11px;
	padding: 0;
	margin: 0;
	width: 395px;
	height: 63px;
	padding-left: 10px;
	padding-top: 135px;
}

.splashScreen_central a {
	font-family: sans-serif;
	line-height: 1.4em;
	color: #666666;
	text-decoration: none;
}

#splashScreen_text {
	float: left;
	font-family: sans-serif;
	font-size: 11px;
	line-height: 1.4em;
	padding-left: 25px;
	z-index: 50002;
}

#splashScreen_text a {
	text-decoration: none;
	color: #1c4196;
}

#splashScreen_version {
	float: right;
	font-family: sans-serif;
	font-size: 11px;
	line-height: 1.4em;
	margin-right: 21px;
	margin-top: 38px;
	z-index: 50002;
	font-size: 10px;
	color: #1c4196;
}

.splashBold {
	font-size: 11px;
	font-weight: bold;
	color: #666666;
	padding: 0 0.1em 0 0;
}

.spalshMotto {
	color: #1c4196;
	font-size: 14px;
	letter-spacing: -.5px;
	padding-top: 8px;
	margin-bottom: 3px;
}

.splashSubTitle {
	font-size: 9px;
	float: left;
}

/* FOOTER */
#footer {
	color: #727262;
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 9px;
	padding-left: 1%;
	position: absolute;
	height: 16px;
	line-height: 16px;
	bottom: 0;
	width: 98%;
}

#footer .fl {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 10px;
	margin: 0px;
	padding: 0px 0px 0px 3px;
	width: 25%;
	float: left;
	text-align: left;
}

#footer .fc {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 10px;
	margin: 0px;
	padding: 0px;
	width: 48%;
	float: left;
	text-align: center;
}
/* ... */

